--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,22 +1,29 @@
-<navbar></navbar>
+<!-- <navbar></navbar> -->
 
-<header class="hero-unit" id="banner">
+<header>
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <br><p class="lead">API Basejump: Request Header Parser Microservice</p>
   </div>
 </header>
 
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
+    <blockquote>
+      Instructions:
+      <ul>
+        <li>The API returns the IP address, and operating system (language, software) for your browser.</li>
       </ul>
-    </div>
-  </div>
+    </blockquote>
+    <h3>Example usage:</h3>
+    <code>http://{{main.host}}<span ng-show="main.port">:{{main.port}}</span>/api/whoami</code>
+    
+    <h3>Example output:</h3>
+    <code>
+        {
+          "ipaddress": "24.103.245.182",
+          "language":  "en-US",
+          "software":  "Windows NT 6.3; WOW64"
+        }
+    </code>
 </div>
 
 <footer></footer>
